tests/invalid/main_guard_rhs_wrong_string_value/main.py
def run_case() -> None:
    print("x")


if __name__ == "__tython_main__":
    run_case()
